# Academic-Performance-Intelligence-Platform

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  scaler.pkl
Notebook/: student_performance.ipynb
